[package]
name = "e-commerceapi"
version = "0.1.0"
edition = "2024"

[dependencies]
actix = "0.13.5"
actix-cors = "0.7.1"
actix-rt = "2.10.0"
actix-web = "4.10.0"
argon2 = "0.5.3"
async-stripe = { version = "0.41", features = ["runtime-tokio-hyper"] }
chrono = { version = "0.4.41", features = ["serde"] }
dotenv = "0.15.0"
env_logger = "0.11.8"
futures = "0.3.31"
jsonwebtoken = "9.3.1"
log = "0.4.27"
rand = "0.9.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.140"
sqlx = { version = "0.8.5", features = ["runtime-tokio", "postgres", "chrono", "uuid"] }
tokio = { version = "1.44.2", features = ["full"] }
uuid = { version = "1.16.0", features = ["serde"] }
validator = "0.20.0"
